Removed dead code.
(cherry picked from commit e07d06ae544f0ef79c80d644d33a33c3ec1d2c3f)

Added code help prevent deadlocks related to sql connections.

--- a/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
+++ b/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
@@ -59,6 +59,7 @@ maxActiveChunks_slow = 4
 maxActiveChunks_med = 4
 maxActiveChunks_fast = 4
 
+
 # Maximum time for all tasks in a user query to complete.
 # scanmaxminutes_fast = 60
 # scanmaxminutes_med = 480
@@ -70,9 +71,11 @@ maxActiveChunks_fast = 4
 
 [sqlconnections]
 # Maximum number of SQL connections for tasks
-maxsqlconn = 800
-# Number of SQL connections reserved for interactive queries (must be less than maxsqlconn)
-reservedinteractivesqlconn = 20
+maxsqlconn = 980
+# Number of SQL connections reserved for interactive queries or
+# queries that require multiple sql connections, such as near-neighbor. 
+# This value must be less than maxsqlconn. 
+reservedinteractivesqlconn = 930
 
 [transmits]
 # Maximum number of concurrent transmits to a czar.
