add support for socket file
also improves entrypoint CLI help

--- a/src/admin/templates/proxy/etc/my-proxy.cnf.jinja
+++ b/src/admin/templates/proxy/etc/my-proxy.cnf.jinja
@@ -1,7 +1,7 @@
 [mysql-proxy]
 
 proxy-address = :4040
-proxy-backend-addresses = {{ backend_host }}:{{ backend_port }}
+proxy-backend-addresses = {{ proxy_backend_address }}
 
 log-level=debug
 
