use vnid configuration in entrypoint

--- a/src/admin/templates/xrootd/etc/cmsd-worker.cf.jinja
+++ b/src/admin/templates/xrootd/etc/cmsd-worker.cf.jinja
@@ -1,7 +1,7 @@
 # Use server mode
 all.role server
 
-cms.vnid ={{ vnid }}
+cms.vnid {{ vnid_config }}
 
 # Use XrdSsi plugin
 xrootd.fslib -2 libXrdSsi.so
