Moved PseudoFifo to its own files and added config entries.

--- a/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
+++ b/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
@@ -105,3 +105,5 @@ largestPriority = 3
 vectRunSizes = 50:50:50:50
 # Minimum number of threads running for each queue. No spaces. Values separated by ':'
 vectMinRunningSizes = 0:1:3:3
+# Maximum number of QueryRequests allowed to be running at one time.
+qReqPseudoFifoMaxRunning = 299
