add targs and templated entrypoint cmd

--- a/src/admin/templates/xrootd/etc/cmsd-manager.cf.jinja
+++ b/src/admin/templates/xrootd/etc/cmsd-manager.cf.jinja
@@ -35,7 +35,7 @@ xrd.network nodnr
 xrd.network dyndns
 xrd.network cache 0
 
-all.manager {{ cmsd_manager }}:2131
+all.manager UNUSED:2131
 
 # - cmsd redirector runs on port 2131
 # - cmsd server does not open server socket
