specify a number of managers in worker xrootd configs

--- a/src/admin/templates/xrootd/etc/cmsd-worker.cf.jinja
+++ b/src/admin/templates/xrootd/etc/cmsd-worker.cf.jinja
@@ -49,7 +49,9 @@ xrd.network nodnr
 xrd.network dyndns
 xrd.network cache 0
 
-all.manager {{ cmsd_manager }}:2131
+{% for itr in range(cmsd_manager_count) %}
+all.manager {{cmsd_manager_name}}-{{itr}}.{{cmsd_manager_name}}:2131
+{% endfor %}
 
 # - cmsd redirector runs on port 2131
 # - cmsd server does not open server socket
