--- a/src/admin/schema/migrate-None-to-0.sql.jinja
+++ b/src/admin/schema/migrate-None-to-0.sql.jinja
@@ -16,9 +16,9 @@ GRANT ALL ON qservMeta.* TO '{{ mysqld_user_qserv }}'@'%';
 GRANT ALL ON qservCssData.* TO '{{ mysqld_user_qserv }}'@'localhost';
 GRANT ALL ON qservCssData.* TO '{{ mysqld_user_qserv }}'@'%';
 
--- TODO FIGURE OUT HOW TO HANDLE THE POD NAME IN CONTAINER-LAND
--- -- Grant root access to replication controller pod
--- GRANT ALL ON *.* TO 'root'@'{{ replication_controller_FQDN }}' IDENTIFIED BY 'CHANGEME' WITH GRANT OPTION;
+-- TODO FIGURE OUT HOW TO NARROW A SCOPE OF THE GRANT
+-- -- Grant root access to replication system
+-- GRANT ALL ON *.* TO 'root'@'%' IDENTIFIED BY 'CHANGEME' WITH GRANT OPTION;
 
 -- Create user for external monitoring applications
 CREATE USER 'monitor'@'localhost' IDENTIFIED BY "{{ mysql_monitor_password }}";
