--- a/src/www/qserv/css/IngestContributions.css
+++ b/src/www/qserv/css/IngestContributions.css
@@ -1,3 +1,6 @@
+#fwk-ingest-contributions-controls label {
+    font-weight:    bold;
+}
 table#fwk-ingest-contributions caption {
     caption-side:   top;
     text-align:     right;
