--- a/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
+++ b/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
@@ -23,7 +23,7 @@ host = {{ czar_db_host }}
 user = qsmaster
 port = {{ czar_db_port }}
 
-# Any table in resultdb that hasn't been updated in this many days is deleted.  
+# Any table in resultdb that hasn't been updated in this many days is deleted.
 oldestResultKeptDays = 7
 
 # maximum number of connection retries to SQL databse (per connection attempt)
@@ -107,3 +107,6 @@ vectRunSizes = 50:50:50:50
 vectMinRunningSizes = 0:1:3:3
 # Maximum number of QueryRequests allowed to be running at one time.
 qReqPseudoFifoMaxRunning = 299
+
+[log]
+logConfig = {{ log_config_file }}
