--- a/src/qmeta/schema/migrate-None-to-5.sql.jinja
+++ b/src/qmeta/schema/migrate-None-to-5.sql.jinja
@@ -183,10 +183,11 @@ COMMENT = 'Metadata about database as a whole, bunch of key-value pairs';
 -- -----------------------------------------------------
 CREATE TABLE IF NOT EXISTS `QMessages` (
   `queryId` BIGINT NOT NULL COMMENT 'Query identifier, foreign key into QueryInfo table',
+  `msgSource` CHAR(63) NOT NULL COMMENT 'Brief string describing the source PARSE, COMM, WORKER, etc',
   `chunkId` INT COMMENT 'chunkId',
   `code` SMALLINT COMMENT 'Error code',
   `message` MEDIUMTEXT NOT NULL COMMENT 'Message generated while executing queryId',
-  `severity` ENUM('INFO', 'ERROR') COMMENT 'severity of the message INFO or ERROR',
+  `severity` ENUM('INFO', 'ERROR') NOT NULL COMMENT 'severity of the message INFO or ERROR',
   `timestamp` FLOAT COMMENT 'time of error message',
   INDEX `QMessages_qId_idx` (`queryId`),
   CONSTRAINT `QMessages_qid_fkey`
