--- a/src/qmeta/schema/migrate-None-to-5.sql.jinja
+++ b/src/qmeta/schema/migrate-None-to-5.sql.jinja
@@ -48,6 +48,9 @@ CREATE TABLE IF NOT EXISTS `QInfo` (
   `messageTable` CHAR(63) NULL COMMENT 'Name of the message table for the ASYNC query',
   `resultLocation` TEXT NULL COMMENT 'Result destination - table name, file name, etc.',
   `resultQuery` MEDIUMTEXT NULL COMMENT 'Query to be used by mysqlproxy to get final results.',
+  `chunkCount` INT NOT NULL COMMENT 'number of chunks needed by the query',
+  `resultBytes` INT DEFAULT 0 COMMENT 'number of bytes in the result',
+  `resultRows` INT DEFAULT 0 COMMENT  'number of rows in the result',
   PRIMARY KEY (`queryId`),
   INDEX `QInfo_czarId_index` (`czarId` ASC),
   CONSTRAINT `QInfo_cid`
