--- a/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
+++ b/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
@@ -41,6 +41,7 @@ unix_socket = {{ czar_db_socket }}
 host = {{ czar_db_host }}
 user = qsmaster
 port = {{ czar_db_port }}
+maxMsgSourceStore = 3
 
 # database connection for QStatusData
 # Using qmeta for now. May move this qservResult or make its own instance
