Extended the catalog/table configuration page
Two columns have been added to display the publishing status of
the tables: when each table was created and when it was published
(if it's been published).

--- a/src/www/qserv/css/ReplicationConfigCatalogs.css
+++ b/src/www/qserv/css/ReplicationConfigCatalogs.css
@@ -28,3 +28,6 @@ table#fwk-controller-config-catalogs caption {
 table#fwk-controller-config-catalogs caption.updating {
     background-color: #ffeeba;
 }
+table#fwk-controller-config-catalogs tbody pre.timestamp {
+    color: maroon;
+}
