--- a/src/qmeta/schema/migrate-None-to-7.sql.jinja
+++ b/src/qmeta/schema/migrate-None-to-7.sql.jinja
@@ -49,8 +49,9 @@ CREATE TABLE IF NOT EXISTS `QInfo` (
   `resultLocation` TEXT NULL COMMENT 'Result destination - table name, file name, etc.',
   `resultQuery` MEDIUMTEXT NULL COMMENT 'Query to be used by mysqlproxy to get final results.',
   `chunkCount` INT NOT NULL COMMENT 'number of chunks needed by the query',
-  `resultBytes` INT DEFAULT 0 COMMENT 'number of bytes in the result',
-  `resultRows` INT DEFAULT 0 COMMENT  'number of rows in the result',
+  `collectedBytes` INT DEFAULT 0 COMMENT 'number of bytes collected from workers',
+  `collectedRows` INT DEFAULT 0 COMMENT  'number of rows collected from workers',
+  `finalRows` INT DEFAULT 0 COMMENT  'number of rows in the final result',
   PRIMARY KEY (`queryId`),
   KEY `QInfo_czarId_index` (`czarId`),
   KEY `QInfo_status_index` (`status`),
@@ -213,5 +214,5 @@ COMMENT = 'Table of messages generated during queries.';
 -- Version 1 introduced QMetadata table and altered schema for QInfo table
 -- Version 2 added query progress data to ProcessList tables.
 -- Version 3 added storing the result query in QMeta.
-INSERT INTO `QMetadata` (`metakey`, `value`) VALUES ('version', '6');
+INSERT INTO `QMetadata` (`metakey`, `value`) VALUES ('version', '7');
 
