Web Dashboard: expanded implementation of the query info page
The new version of the page shows intermediate queries
srored in the query metadata table QInfo.  A few bugs have been
fixed. Added support for toggling query view (compact vs expanded.
and copying quwery text to the clipboard.)

--- a/src/www/qserv/css/StatusQueryInspector.css
+++ b/src/www/qserv/css/StatusQueryInspector.css
@@ -9,6 +9,7 @@
 }
 #fwk-status-query-info tbody pre {
     padding: 0;
+    padding-top: 3px;
     margin: 0;
 }
 #fwk-status-query-info tbody pre.query-in-progress {
@@ -20,10 +21,15 @@
 #fwk-status-query-info tbody pre.query-finished {
     color: default;
 }
-#fwk-status-query-info textarea {
-    width: 100%;
-    height: 8.5em;
-    overflow-y: scroll;
+#fwk-status-query-info tbody > tr > td > button.copy-query {
+    height:20px;
+    margin-top: 7px;
+}
+#fwk-status-query-info tbody > tr > td > pre.query_toggler {
+    color:#4d4dff;
+}
+#fwk-status-query-info tbody > tr > td > pre.query_toggler:hover {
+    cursor:pointer;
 }
 #fwk-status-query-messages tbody pre {
     padding: 0;
