Web Dashboard: Fixed a bug in the implementation of the query inspector
Also, a few improvements have been made to teh layout of the inspector.

--- a/src/www/qserv/css/StatusQueryInspector.css
+++ b/src/www/qserv/css/StatusQueryInspector.css
@@ -7,6 +7,9 @@
 #fwk-status-query-status #status.updating {
     background-color: #ffeeba;
 }
+#fwk-status-query-info thead th.borderless {
+    border-color: transparent;
+}
 #fwk-status-query-info tbody pre {
     padding: 0;
     padding-top: 3px;
