--- a/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
+++ b/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
@@ -83,3 +83,7 @@ maxtransmits = 50
 # If more than this number of large transmits is happening at once, wait to
 # start more transmits until some are done.
 maxalreadytransmitting = 10
+
+[results]
+# The name of a folder where query results will be stored.
+dirname = {{ results_dirname }}
