Refactored and extended worker configuration service
The service is now available to the client code via shared pointer
that can be stored and used by classes as needed. The change reduces
the number of parameters which are sent around the code. In the new
version of the code only the shared pointer to the service is put
to where the configuration parameters are consumed.

Also added new parameters to support the file-based result delivery,
including: a location of the results folder, the number of BOOST ASIO
threads to run the QHTTP server at worker, and a selector for the desired
results delivery protocol.

--- a/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
+++ b/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
@@ -85,5 +85,23 @@ maxtransmits = 50
 maxalreadytransmitting = 10
 
 [results]
+
 # The name of a folder where query results will be stored.
 dirname = {{ results_dirname }}
+
+# The port number of the worker XROOTD service for serving files.
+# NOTE: the hardcoded value may need to be replaced with a template
+xrootd_port = 1094
+
+# The number of the BOOST ASIO threads for HTTP requests
+num_http_threads = 4
+
+# Result delivery protocol. Allowed options:
+#   SSI   - XROOTD/SSI stream (the default mode if no specific choice is proided)
+#   XROOT - XROOT file protocol
+#   HTTP  - HTTP protocol
+protocol = SSI
+
+# Set to any value but 0 if result files (if any) left after the previous run of
+# the worker had to be deleted from the corresponding folder.
+clean_up_on_start = 1
