Add results folder to the transient worker configuration

--- a/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
+++ b/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
@@ -87,3 +87,6 @@ maxalreadytransmitting = 10
 [results]
 # The name of a folder where query results will be stored.
 dirname = {{ results_dirname }}
+# The port number of the worker XROOTD service for serving files.
+# NOTE: the hardcoded value may need to be replaced with a template
+xrootd_port = 1094
