--- a/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
+++ b/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
@@ -91,6 +91,18 @@ xrootdSpread = 0
 # This is per user query and important milestones ignore this limit.
 qMetaSecsBetweenChunkCompletionUpdates = 59
 
+
+# If not 0 then broadcast query completion/cancellation events to all workers
+# so that they would do proper garbage collection and resource recycling.
+notifyWorkersOnQueryFinish = 1
+
+# If not 0 then broadcast this event to all workers to let them cancel any older
+# that were submitted before the restart. The first query identifier in the new
+# series will be reported to the workers. The identifier will be used as
+# a high watermark for diffirentiating between the older (to be cancelled)
+# and the newer queries.
+notifyWorkersOnCzarRestart = 1
+
 #[debug]
 #chunkLimit = -1
 
