Web Dashboard: added a page for displaying info on worker result files
Minir improvements and fixes on other pages.

--- a/src/www/qserv/css/QservWorkerResultsFilesystem.css
+++ b/src/www/qserv/css/QservWorkerResultsFilesystem.css
@@ -22,3 +22,6 @@ table#fwk-qserv-results-filesystem > thead > tr > th.sticky {
     top:80px;
     z-index:2;
 }
+table#fwk-qserv-results-filesystem tbody > tr.display-worker-files:hover {
+    cursor:pointer;
+}
