--- a/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
+++ b/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
@@ -122,3 +122,54 @@ vectMinRunningSizes = 0:1:3:3
 # Maximum number of QueryRequests allowed to be running at one time.
 qReqPseudoFifoMaxRunning = 299
 
+[replication]
+
+# This section contains parameters related to the Czar management service
+# that is used by the Replication System to manage Qserv Czaar or to acquire
+# monitoring stats from Czar. The Czar is required to self-register
+# themselves with the Replication System's Registry that can be contacted
+# at a location specified via connection parameters 'registry_host' and
+# 'registry_port'. Configuration parameters 'instance_id', 'auth_key'
+# and 'admin_auth_key' represent the security context of the Czar control
+# protocol. This context is required to be provided by the Czar when registering
+# itself with the Registry. The context is also used by the management
+# service when processing management requests sent to the service by
+# the Replication Controller or relevant applications.
+#
+# The Czar is required to periodically update its registration status at
+# the interval specified at 'registry_heartbeat_ival_sec'. The Czar status
+# includes (at least):
+#   - the unique identifier of the Czar
+#   - the FQDN of a host (or a pod) where the Czar is run
+#   - the HTTP port of the Czar management service (parameter 'http_port')
+
+# The unique instance of the Replication System's domain.
+instance_id = {{ repl_instance_id }}
+
+# The authorization key is required by the Czar control protocol.
+auth_key = {{ repl_auth_key }}
+admin_auth_key = {{ repl_admin_auth_key }}
+
+# The FQDN of a host where the Replication System's Registry service is run. The Czar
+# will self-report its connection parameters to the Registry.
+registry_host = {{ repl_registry_host }}
+
+# The port number of the Replication System's Registry service.
+registry_port = {{ repl_registry_port }}
+
+# The heartbeat interval for self-registering the Czar management services at
+# the Replication System's Registry. Note that the value must be strictly
+# higher than 0.
+registry_heartbeat_ival_sec = 1
+
+# The port number of the Czar control service used by the Replication
+# Controller and the Czar monitoring apps. If 0 is set as a value of
+# the parameter then the first available port will be assumed. Note that
+# the actual (whether explicitly specified or dynamically allocated) port
+# number will be reported to the Replication Registry service.
+# Note that the value must be strictly higher than 0.
+http_port = {{ repl_http_port }}
+
+# The number of the BOOST ASIO threads for serving HTTP requests.
+# Note that the value must be strictly higher than 0.
+num_http_threads = 2
