--- a/src/www/qserv/css/QservCzarConfig.css
+++ b/src/www/qserv/css/QservCzarConfig.css
@@ -1,3 +1,6 @@
+#fwk-qserv-czar-config-controls label {
+    font-weight:    bold;
+}
 table#fwk-qserv-czar-config pre {
     padding:    0;
     margin:     0;
