Changed so QueriesAndChunks is no longer a friend of QueryStatistics.

--- a/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
+++ b/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
@@ -69,6 +69,9 @@ maxActiveChunks_fast = 4
 # Maximum number of Tasks that can take too long before moving a query to the snail scan.
 # maxtasksbootedperuserquery = 5
 
+# Maximum number of booted tasks allowed to be running concurrently (aka dark mode tasks).
+# maxconcurrentbootedtasks = 25
+
 [sqlconnections]
 # Maximum number of SQL connections for tasks
 maxsqlconn = 980
