--- a/src/qmeta/schema/migrate-None-to-10.sql.jinja
+++ b/src/qmeta/schema/migrate-None-to-10.sql.jinja
@@ -207,6 +207,16 @@ CREATE TABLE IF NOT EXISTS `QMessages` (
 ENGINE = InnoDB
 COMMENT = 'Table of messages generated during queries.';
 
+-- -----------------------------------------------------
+-- Table `chunkMap`
+-- -----------------------------------------------------
+
+CREATE TABLE IF NOT EXISTS `chunkMap` (
+  `chunks` BLOB NOT NULL COMMENT 'A collection of chunk replicas at workers in the JSON format',
+  `update_time` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT 'The most recent update time of the map')
+ENGINE = InnoDB
+COMMENT = 'Chunk disposition across workers';
+
 -- Update version on every schema change.
 -- Version 0 corresponds to initial QMeta release and it had no
 -- QMetadata table at all.
@@ -219,4 +229,6 @@ COMMENT = 'Table of messages generated during queries.';
 -- Version 7 added final row count to QInfo.
 -- Version 8 replaced INT with BIGINT in the byte and row counter columns of QInfo.
 -- Version 9 removed the full-text index on the query text from QInfo.
-INSERT INTO `QMetadata` (`metakey`, `value`) VALUES ('version', '9');
+-- Version 10 added the worker-to-chunk map table chunkMap
+
+INSERT INTO `QMetadata` (`metakey`, `value`) VALUES ('version', '10');
