Added query retries.

--- a/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
+++ b/src/admin/templates/proxy/etc/qserv-czar.cnf.jinja
@@ -97,7 +97,7 @@ notifyWorkersOnCzarRestart = 1
 #[debug]
 #chunkLimit = -1
 
-# Please see qdisp/QdispPool.h QdispPool::QdispPool for more information
+# Please see util/QdispPool.h QdispPool::QdispPool for more information
 [qdisppool]
 #size of the pool
 poolSize = 50
