--- a/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
+++ b/src/admin/templates/xrootd/etc/xrdssi.cf.jinja
@@ -9,8 +9,7 @@ socket = {{ db_socket }}
 
 # Username for mysql connections
 username = qsmaster
-# qsmaster does not have a password
-password =
+password = CHANGEME2
 
 [memman]
 
