--- a/src/qmeta/schema/migrate-None-to-11.sql.jinja
+++ b/src/qmeta/schema/migrate-None-to-11.sql.jinja
@@ -195,6 +195,28 @@ CREATE TABLE IF NOT EXISTS `QMessages` (
 ENGINE = InnoDB
 COMMENT = 'Table of messages generated during queries.';
 
+-- -----------------------------------------------------
+-- Table `chunkMap`
+-- -----------------------------------------------------
+
+CREATE TABLE IF NOT EXISTS `chunkMap` (
+  `worker` VARCHAR(256) NOT NULL COMMENT 'A unique identifier of a worker hosting the chunk replica',
+  `database` VARCHAR(256) NOT NULL COMMENT 'The name of a database',
+  `table` VARCHAR(256) NOT NULL COMMENT 'The name of a table',
+  `chunk` INT UNSIGNED NOT NULL COMMENT 'The number of a chunk',
+  `size` BIGINT UNSIGNED NOT NULL COMMENT 'The size of a chunk')
+ENGINE = InnoDB
+COMMENT = 'Chunk disposition across workers';
+
+-- -----------------------------------------------------
+-- Table `chunkMapStatus`
+-- -----------------------------------------------------
+
+CREATE TABLE IF NOT EXISTS `chunkMapStatus` (
+  `update_time` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT 'The most recent update time of the map')
+ENGINE = InnoDB
+COMMENT = 'Satus info on the chunk map';
+
 -- Update version on every schema change.
 -- Version 0 corresponds to initial QMeta release and it had no
 -- QMetadata table at all.
@@ -208,4 +230,5 @@ COMMENT = 'Table of messages generated during queries.';
 -- Version 8 replaced INT with BIGINT in the byte and row counter columns of QInfo.
 -- Version 9 removed the full-text index on the query text from QInfo.
 -- Version 10 redefined schema of the ProcessList tables.
-INSERT INTO `QMetadata` (`metakey`, `value`) VALUES ('version', '10');
+-- Version 11 added the worker-to-chunk map tables chunkMap and chunkMapStatus
+INSERT INTO `QMetadata` (`metakey`, `value`) VALUES ('version', '11');
